--- a/lib/routes.yml
+++ b/lib/routes.yml
@@ -3,16 +3,19 @@ generate_flow_wallet:
   method: "get"
   path: "/flow/wallet"
   path_variable_keys: {}
+  body: {}
 
 deploy_flow_nft: 
   method: "post"
   path: "/nft/deploy/"
   path_variable_keys: {}
+  body: {}
 
 generate_private_key: 
   method: "post"
   path: "/flow/wallet/priv"
   path_variable_keys: {}
+  body: {}
 
 
 generate_flow_account_address_from_extended_public_key: 
@@ -26,31 +29,36 @@ mint_nft:
   method: "post"
   path: "/nft/mint"
   path_variable_keys: {}
+  body: {}
 
 
 mint_nft_multiple_tokens: 
   method: "post"
   path: "/nft/mint/batch"
   path_variable_keys: {}
+  body: {}
 
 
 transfer_nft_token: 
   method: "post"
   path: "/nft/transaction"
   path_variable_keys: {}
+  body: {}
 
 
 burn_nft: 
   method: "post"
   path: "/nft/burn"
   path_variable_keys: {}
+  body: {}
 
 
 get_nft_tokens_by_address: 
   method: "get"
   # path: "/nft/balance/:chain/:contractAddress/:address"
   path: "/nft/balance"
-  path_variable_keys: {chain: "", contractAddress: "", address: ""}
+  path_variable_keys: {}
+  body: {}
 
 
 get_token_metadata: 
@@ -58,6 +66,7 @@ get_token_metadata:
   # path: "/nft/metadata/:chain/:contractAddress/:token?account=0x2d0d7b39db4e3a08"
   path: "/nft/metadata"
   path_variable_keys: {chain: "", contractAddress: "", token: ""}
+  body: {}
 
 
 
@@ -66,6 +75,7 @@ get_contract_address:
   # path: "/nft/address/:chain/:txId"
   path: "/nft/address"
   path_variable_keys: {chain: "", txId: ""}
+  body: {}
 
 
 get_nft_transaction: 
@@ -73,6 +83,7 @@ get_nft_transaction:
   # path: "/nft/address/:chain/:txId"
   path: "/nft/address"
   path_variable_keys: {chain: "", txId: ""}
+  body: {}
 
 
 get_account: 
@@ -80,3 +91,5 @@ get_account:
   # path: "/flow/account/:address"
   path: "/flow/account"
   path_variable_keys: {address: ""}
+  body: {}
+
